# ChangeLog for dev-python/sqlalchemy
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.21 2008/04/16 09:50:01 hawking Exp $

*sqlalchemy-0.4.5 (16 Apr 2008)

  16 Apr 2008; Ali Polatel <hawking@gentoo.org> +sqlalchemy-0.4.5.ebuild:
  Version bump.

*sqlalchemy-0.4.4 (13 Mar 2008)

  13 Mar 2008; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlalchemy-0.4.2.ebuild, +sqlalchemy-0.4.4.ebuild:
  Version bump (bug #213140). Dropped old version.

*sqlalchemy-0.4.2 (05 Jan 2008)

  05 Jan 2008; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlalchemy-0.4.0.ebuild, +sqlalchemy-0.4.2.ebuild:
  Version bump. Dropped old version.

*sqlalchemy-0.4.0 (01 Nov 2007)

  01 Nov 2007; Ali Polatel <hawking@gentoo.org> +sqlalchemy-0.4.0.ebuild:
  version bump.

*sqlalchemy-0.3.10 (21 Jul 2007)

  21 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlalchemy-0.3.8.ebuild, -sqlalchemy-0.3.9.ebuild,
  +sqlalchemy-0.3.10.ebuild:
  Version bump. Dropped old versions.

*sqlalchemy-0.3.9 (16 Jul 2007)

  16 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  +sqlalchemy-0.3.9.ebuild:
  Version bump.

  24 Jun 2007; Christoph Mende <angelos@gentoo.org> sqlalchemy-0.3.7.ebuild:
  Stable on amd64 wrt bug 178027

  24 Jun 2007; Raúl Porcel <armin76@gentoo.org> sqlalchemy-0.3.7.ebuild:
  x86 stable wrt #178027

  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> sqlalchemy-0.3.7.ebuild:
  Marked ~amd64 Oops, pymssql not stable; fricken repoman

  15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> sqlalchemy-0.3.7.ebuild:
  Marked stable on amd64 for bug #178027

*sqlalchemy-0.3.8 (03 Jun 2007)

  03 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org>
  +sqlalchemy-0.3.8.ebuild:
  Version bump.

  10 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
  sqlalchemy-0.3.7.ebuild:
  Fixed sqlite deps, removed src_unpack. Thanks to Betelgeuse.

*sqlalchemy-0.3.7 (03 May 2007)
