@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sqlalchemy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.21 2008/04/16 09:50:01 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy/ChangeLog,v 1.22 2008/05/31 16:00:11 hawking Exp $
+
+*sqlalchemy-0.4.6 (31 May 2008)
+
+  31 May 2008; Ali Polatel <hawking@gentoo.org> +sqlalchemy-0.4.6.ebuild:
+  Version bump.
 
 *sqlalchemy-0.4.5 (16 Apr 2008)
 
